--- a/front-end/src/Components/FoodItem/FoodItem.css
+++ b/front-end/src/Components/FoodItem/FoodItem.css
@@ -37,3 +37,30 @@
     font-weight: 500;
     margin: 10px 0px;
 }
+.food-item-img-container {
+    position: relative;
+
+}
+.food-item-img-container .add {
+    width: 35px;
+    position: absolute;
+    cursor: pointer;
+    bottom: 15px;
+    right: 15px;
+    border-radius: 50%;
+}
+.food-item-counter {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    padding: 6px;
+    border-radius: 50px;
+    background-color: white;
+}
+.food-item-counter img {
+    width: 30px;
+}
+
