--- a/front-end/src/Components/AppDownload/AppDownload.css
+++ b/front-end/src/Components/AppDownload/AppDownload.css
@@ -1,7 +1,7 @@
 .app-download {
-    margin: auto auto;
+    margin: 0 auto;
     margin-top: 100px;
-    font-size: mac(3vw,20px);
+    font-size: max(3vw,20px);
     text-align: center;
     font-weight: 500;
 
